--- a/src/stories/components/ChecTag.stories.mdx
+++ b/src/stories/components/ChecTag.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { text, select } from '@storybook/addon-knobs';
-import Tag from '../../components/BaseTag';
+import Tag from '../../components/ChecTag';
 
 <Meta title="Components/Tag" component={Tag} />
 
