Ensure datepicker attrbutes are passed correctly to text field component

--- a/src/stories/components/ChecDatepicker.stories.mdx
+++ b/src/stories/components/ChecDatepicker.stories.mdx
@@ -28,7 +28,7 @@ prop definitions on the library component are also available _except `config`_.
       },
       template: `
         <div class="mx-auto max-w-lg pt-6">
-          <ChecDatepicker label="Date" v-model="date" />
+          <ChecDatepicker label="Date" v-model="date" name="test" />
         </div>`
     }}
   </Story>
