Fix buggy dropdown behaviour:
- Dropdown "popper" being cut off by overflow on containers
- Overzealous overflow styling on popovers
- Click event delegation from dropdown to popover

--- a/src/stories/FormFields.stories.mdx
+++ b/src/stories/FormFields.stories.mdx
@@ -31,7 +31,7 @@ import ChecDropdown from '../components/ChecDropdown.vue';
           <div class="max-w-3xl w-full mx-auto grid grid-cols-2 gap-1">
             <TextField
               name="input-name"
-              label="Dropdown"
+              label="Text field"
               placeholder="Example Placeholder"
               v-model="inputValue"
             />
