--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -24,10 +24,16 @@ import TextField from '../../components/TextField.vue';
         compact: {
           default: boolean('Compact')
         },
+        active: {
+          default: boolean('Active', false)
+        },
+        hoverable: {
+          default: boolean('Hoverable', true)
+        },
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard :borders="borders" :compact="compact" class="w-40 h-40">
+          <ChecCard :borders="borders" :compact="compact" :active="active" :hoverable="hoverable" class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -43,6 +49,14 @@ import TextField from '../../components/TextField.vue';
       components: {
         ChecCard
       },
+      props: {
+        active: {
+          default: boolean('Active', false)
+        },
+        hoverable: {
+          default: boolean('Hoverable', true)
+        },
+      },
       data() {
         return {
           borders: ['full', 'none', 'vertical', 'horizontal'],
@@ -50,7 +64,7 @@ import TextField from '../../components/TextField.vue';
       },
       template: `
         <div class="p-16 flex flex-col justify-between items-center w-full bg-gray-100 space-y-4">
-          <ChecCard v-for="border in borders" :borders="border" class="w-1/2 h-40 text-center">
+          <ChecCard v-for="border in borders" :borders="border" :active="active" :hoverable="hoverable" class="w-1/2 h-40 text-center">
             <code class="text-center">borders="{{ border }}"</code>
           </ChecCard>
         </div>`
@@ -63,12 +77,20 @@ import TextField from '../../components/TextField.vue';
 <Preview>
   <Story name="Compact">
     {{
+      props: {
+        active: {
+          default: boolean('Active', false)
+        },
+        hoverable: {
+          default: boolean('Hoverable', true)
+        },
+      },
       components: {
         ChecCard
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard borders="full" compact class="w-40 h-40">
+          <ChecCard borders="full" compact :active="active" :hoverable="hoverable" class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -89,6 +111,12 @@ import TextField from '../../components/TextField.vue';
         borders: {
           default: select('Borders', ['full', 'none', 'vertical', 'horizontal']),
         },
+        active: {
+          default: boolean('Active', false)
+        },
+        hoverable: {
+          default: boolean('Hoverable', true)
+        },
       },
       template: `
         <div class="p-16 flex justify-center w-full font-lato">
@@ -96,6 +124,8 @@ import TextField from '../../components/TextField.vue';
             :borders="borders"
             class="w-full max-w-lg"
             tailwind="bg-gray-100"
+            :active="active"
+            :hoverable="hoverable"
           >
             <span class="block text-lg text-gray-500 font-bold mb-4">
               Update payment method
@@ -126,6 +156,14 @@ import TextField from '../../components/TextField.vue';
 <Preview>
   <Story name="Fancy overlay">
     {{
+      props: {
+        active: {
+          default: boolean('Active', false)
+        },
+        hoverable: {
+          default: boolean('Hoverable', true)
+        },
+      },
       components: {
         ChecCard,
         TextField,
@@ -137,6 +175,8 @@ import TextField from '../../components/TextField.vue';
             borders="none"
             class="text-white w-full max-w-lg"
             tailwind="bg-primary-gradient"
+            :active="active"
+            :hoverable="hoverable"
           >
             <h3 class="text-white mb-4">
               It's our brand!
@@ -144,8 +184,11 @@ import TextField from '../../components/TextField.vue';
             <p>
               Much wow! Such amaze!
             </p>
-            <ChecIcon icon="chec" class="absolute w-32 h-32 text-white pointer-events-none opacity-25 bottom-0"
-                      style="right: 20px">
+            <ChecIcon
+              icon="chec"
+              class="absolute w-32 h-32 text-white pointer-events-none opacity-25 bottom-0"
+              style="right: 20px"
+            />
           </ChecCard>
         </div>`
     }}
