--- a/src/stories/components/ChecNotification.stories.mdx
+++ b/src/stories/components/ChecNotification.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from "@storybook/addon-actions";
 import { text, select } from '@storybook/addon-knobs';
+import ChecButton from '../../components/ChecButton.vue';
 import ChecNotification from '../../components/ChecNotification.vue';
 
 <Meta title="Components/Notifications" component={ChecNotification} />
@@ -173,6 +174,60 @@ import ChecNotification from '../../components/ChecNotification.vue';
             :hideTime="3000"
           >
             I will disappear after 3 seconds
+          </ChecNotification>
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+
+# Notification With Button
+
+<Props of={ChecNotification} />
+
+<Preview>
+  <Story name="With Button">
+    {{
+      components: {
+      ChecButton,
+        ChecNotification
+      },
+      data() {
+        return {
+          closed: false,
+        };
+      },
+      methods: {
+        close() {
+          setTimeout(() => this.closed = false, 3000);
+          this.closed = true;
+          return action('Notification closed!')();
+        }
+      },
+      props: {
+        variant: {
+          default: select('Variant', ['success', 'error', 'warning', 'info']),
+        },
+        text: {
+          default: text('Text to Notification', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'),
+        },
+        ButtonText: {
+          default: text('Button Text' , 'Read More'),
+        },
+      },
+      template: `
+        <div class="w-1/4 mx-auto pt-6 font-lato">
+          <ChecNotification
+            v-if="!closed"
+            :variant="variant"
+            @close="close()"
+            persist
+          >
+            {{text}}
+            <ChecButton
+              variant="round"
+              v-html="ButtonText"
+            />
           </ChecNotification>
         </div>`
     }}
